<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FunnyPaint</string>
    <string name="dButton1">Tool</string>
    <string name="dButton2">Width</string>
    <string name="dButton3">Color</string>
    <string name="dButton4">Options</string>

    <string name="colourHeader">Select a colour</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="colorHint">#</string>
    <string name="zero">0</string>
    <string name="selectB">Select</string>
    <string name="cancelB">Cancel</string>
    <string name="currentPath">Current path:</string>
    <string name="saveB">Save</string>

    <string name="width">Width</string>
    <string name="widthNumbers">1&#8211;10</string>

    <string name="brush">Brush</string>
    <string name="circle">Circle</string>
    <string name="eraser">Eraser</string>
    <string name="fill">Filler</string>
    <string name="line">Line</string>
    <string name="curvedLine">Curved Line</string>
    <string name="Logo">Logo</string>
    <string name="text">Text</string>
    <string name="rectangle">Rectangle</string>
    <string name="pen">Pen</string>
    <string name="exit">Exit</string>
    <string name="or">OR</string>
    <string name="fileName">Enter a file name</string>
    <string name="okB">OK</string>
    <string name="question">Do you want to overwrite it?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>
