<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/fileName"
            android:hint="@string/fileName"
            android:layout_alignParentLeft="true" android:layout_marginLeft="80dp"
            android:layout_alignParentTop="true" android:layout_marginTop="15dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/okB"
            android:id="@+id/okB"
            android:layout_alignParentLeft="true" android:layout_marginLeft="71dp"
            android:layout_below="@+id/fileName"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancelB"
            android:id="@+id/cancelB3"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="170dp"
            android:layout_below="@+id/fileName"/>
</RelativeLayout>