<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:id="@+id/question"
            android:layout_centerHorizontal="true"
            android:layout_alignParentTop="true"
            android:singleLine="false"
            android:textSize="22sp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:id="@+id/yes"
            android:layout_alignLeft="@+id/question"
            android:layout_below="@+id/question"
            android:singleLine="false"
            android:layout_marginTop="10dp"/>
    <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:id="@+id/no"
            android:layout_alignRight="@+id/question"
            android:layout_below="@+id/question"
            android:layout_marginTop="10dp"/>
</RelativeLayout>